--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="pastel_gray">#F5F7FA</color>
     <color name="text_dark">#212121</color>
     <color name="bleu_marine">#001F3F</color>
+    <color name="bleu_violet">#4A43EC</color>
+    4A43EC
     <color name="gris_clair">#F3F4F6</color> <!-- pour fond clair si besoin -->
 
 
