--- a/app/src/main/res/color/nav_item_color.xml
+++ b/app/src/main/res/color/nav_item_color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
+    <item android:color="#4F9BB7" android:state_checked="true" />
+    <item android:color="#9E9E9E" android:state_checked="false" />
 </selector>
