--- a/app/src/main/res/layout/item_mission.xml
+++ b/app/src/main/res/layout/item_mission.xml
@@ -6,121 +6,124 @@
     android:layout_margin="12dp"
     app:cardCornerRadius="18dp"
     app:cardElevation="4dp"
-    android:backgroundTint="@color/white"> <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:backgroundTint="@color/white">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageViewMission"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:background="#F0F0F0"
-            app:shapeAppearanceOverlay="@style/RoundedCornersImage" />
+            android:layout_height="160dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="45dp"
-            android:layout_height="48dp"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="10dp"
-            app:cardBackgroundColor="#CCFFFFFF">
-            <LinearLayout
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageViewMission"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:textColor="#FF565D"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="JUIN"
-                    android:textColor="#FF565D"
-                    android:textSize="10sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </FrameLayout>
+                android:scaleType="centerCrop"
+                android:background="#F0F0F0"
+                app:shapeAppearanceOverlay="@style/RoundedCornersImage" />
 
-    <TextView
-        android:id="@+id/textViewMissionTitre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="8dp"
-        android:text="Refonte Interface Mobile"
-        android:textColor="#120D26"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="8dp">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="24dp"
-            android:src="@drawable/ic_avatars_group" /> <TextView
-        android:id="@+id/textViewMissionDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="+20 Postulants"
-        android:textColor="#5669FF"
-        android:textSize="13sp"
-        android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
-
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:alpha="0.4"
-            android:src="@drawable/ic_location_pin" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="45dp"
+                android:layout_height="48dp"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="#CCFFFFFF">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textViewDateDay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:textColor="#181717"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
+                    <TextView
+                        android:id="@+id/textViewDateMonth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="JUIN"
+                        android:textColor="#1B1B1B"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
         <TextView
-            android:id="@+id/textViewMissionDate"
+            android:id="@+id/textViewMissionTitre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:text="Paris, France (Télétravail)"
-            android:textColor="#808080"
-            android:textSize="13sp" />
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="8dp"
+            android:textColor="#120D26"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_avatars_group" />
+
+            <TextView
+                android:id="@+id/textViewMissionPart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:textColor="#5669FF"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:alpha="0.4"
+                android:src="@drawable/ic_location_pin" />
+
+            <TextView
+                android:id="@+id/textViewMissionLoc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:textColor="#808080"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnViewDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Voir détail"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:backgroundTint="#4F9BB7"
+            app:cornerRadius="12dp" />
+
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btnViewDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Voir détail"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:backgroundTint="#5669FF"
-        app:cornerRadius="12dp" />
-
-</LinearLayout>
 </com.google.android.material.card.MaterialCardView>
