--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.HealthProject" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/pastel_blue_dark</item>
@@ -6,7 +6,13 @@
         <item name="colorSurface">@color/white</item>
         <item name="android:windowBackground">@color/pastel_gray</item>
         <item name="android:textColorPrimary">@color/text_dark</item>
+
+        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
     </style>
 
+    <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
+        <item name="itemIconTint">@color/nav_item_color</item>
+        <item name="itemTextColor">@color/nav_item_color</item>
+    </style>
 
 </resources>
