--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,94 +5,92 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/img_header_circles"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="-10dp"
-        android:src="@drawable/img" />
-
-    <ImageButton
-    android:id="@+id/btn_back"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginStart="24dp"
-    android:layout_marginTop="60dp"
-    android:background="?attr/selectableItemBackgroundBorderless"
-
-    app:tint="#000000" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="32dp">
+        android:padding="28dp"
+        android:gravity="center_horizontal">
 
         <ImageView
-            android:layout_width="284dp"
-            android:layout_height="257dp"
-            android:layout_marginTop="16dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/back" /> <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginTop="30dp"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:hint="Enter you email"
-        android:inputType="textEmailAddress"
-        android:textSize="14sp" />
+            android:layout_width="400dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/logoap" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Health Connect"
+            android:textColor="#2D3142"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="Connexion"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext_rounded"
+            android:hint="abc@email.com"
+            android:inputType="textEmailAddress"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:hint="Confirm password"
-            android:background="@drawable/img_1"
+            android:layout_height="56dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/edittext_rounded"
+            android:hint="Votre mot de passe"
             android:inputType="textPassword"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:textSize="14sp" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="191dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/img_2"
-            android:text="Login"
-            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:layout_marginTop="35dp"
+            android:backgroundTint="#4F9BB7"
+            android:text="SE CONNECTER"
+            android:textAllCaps="true"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:backgroundTint="#52C2C7" />
+            app:cornerRadius="12dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Not have an account? "
-                android:textColor="#333333"
-                android:textSize="12sp" />
+                android:text="Vous n'avez pas de compte ? "
+                android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/tvGoToRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
-                android:textColor="#52C2C7"
-                android:textSize="12sp"
+                android:text="S'inscrire"
+                android:textColor="#4F9BB7"
                 android:textStyle="bold" />
         </LinearLayout>
 
